--- a/.env
+++ b/.env
@@ -31,3 +31,9 @@ APP_SECRET=cd71d9e13f1b72c67411d702027a4065
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@mysql:3306/symfony?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=f3bc8ce2f35721e52c1046854694ca59
+###< lexik/jwt-authentication-bundle ###
