--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,15 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.3.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "friendsofsymfony/rest-bundle": "^2.6",
         "jms/serializer-bundle": "^3.5",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.5",
+        "paragonie/random_compat": "2.0.9",
         "ramsey/uuid": "^3.9",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "4.4.*",
@@ -26,12 +29,13 @@
         "symfony/property-access": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer-pack": "*",
+        "symfony/templating": "4.4.*",
         "symfony/translation": "4.4.*",
+        "symfony/twig-bundle": "4.4.*",
         "symfony/twig-pack": "*",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
-        "symfony/yaml": "4.4.*",
-        "ext-json": "*"
+        "symfony/yaml": "4.4.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
