--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,12 @@
 #controllers:
 #    resource: '../src/Controller/'
 #    type:     annotation
+
+api_login_check:
+    path: /api/login_check
+
+#fos_oauth_server_token:
+#    resource: "@FOSOAuthServerBundle/Resources/config/routing/token.xml"
+#
+#fos_oauth_server_authorize:
+#    resource: "@FOSOAuthServerBundle/Resources/config/routing/authorize.xml"
