--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,12 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "consistence/coding-standard": "^3.0.1",
+        "escapestudios/symfony2-coding-standard": "3.x-dev",
+        "phpstan/phpstan-shim": "^0.11.19",
+        "phpstan/phpstan-symfony": "^0.11.6",
+        "slevomat/coding-standard": "~5.0",
+        "squizlabs/php_codesniffer": "3.*",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
