--- a/composer.json
+++ b/composer.json
@@ -39,14 +39,16 @@
     },
     "require-dev": {
         "consistence/coding-standard": "^3.0.1",
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "escapestudios/symfony2-coding-standard": "3.x-dev",
+        "fzaninotto/faker": "^1.9",
         "phpstan/phpstan-shim": "^0.11.19",
         "phpstan/phpstan-symfony": "^0.11.6",
         "slevomat/coding-standard": "~5.0",
         "squizlabs/php_codesniffer": "3.*",
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
     },
