--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,7 +24,12 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
-
+        
+    App\Exception\HttpExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception }
+    
+    
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     sensio_framework_extra.view.listener:
