--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,8 @@
     "plugin:vue/recommended"
   ],
   "rules": {
-    "indent": ["error", 2]
+    "vue/script-indent": ["error", 4],
+    "vue/html-indent": ["error", 4],
+    "indent": ["error", 4]
   }
 }
