--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "csfix": "eslint assets/vue --ext .js,.vue, --fix"
     },
     "dependencies": {
+        "axios": "^0.19.0",
         "bootstrap": "^4.4.1",
         "sass": "^1.23.7",
         "vue": "^2.6.10",
         "vue-loader": "^15.7.2",
         "vue-router": "^3.1.3",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.1.2"
     }
 }
