--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,15 +7,28 @@
   },
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "node": true,
+    "commonjs": true
   },
   "extends": [
-    "eslint:recommended",
-    "plugin:vue/recommended"
+    "eslint:recommended"
+    //"plugin:vue/recommended"
   ],
   "rules": {
     "vue/script-indent": ["error", 4],
     "vue/html-indent": ["error", 4],
-    "indent": ["error", 4]
+    "vue/html-self-closing": ["error", {
+      "html": {
+        "void": "never",
+        "normal": "never",
+        "component": "never"
+      }
+    }],
+    "indent": ["error", 4],
+    "semi": [
+      "error",
+      "always"
+    ]
   }
 }
