--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
         "sass": "^1.23.7",
+        "slick-carousel": "^1.8.1",
         "vue": "^2.6.10",
         "vue-loader": "^15.7.2",
         "vue-router": "^3.1.3",
