--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-json": "*",
         "friendsofsymfony/rest-bundle": "^2.6",
         "jms/serializer-bundle": "^3.5",
+        "knplabs/knp-paginator-bundle": "^5.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.5",
         "paragonie/random_compat": "2.0.9",
