--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,11 +25,12 @@ security:
             security: false
         api:
             pattern:   ^/api
+            methods: ['POST', 'PUT', 'DELETE']
             stateless: true
             guard:
                 authenticators:
-                    - lexik_jwt_authentication.jwt_token_authenticator
+                    - app.jwt_token_authenticator
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/doc,   roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY, methods: ['POST', 'PUT', 'DELETE']}
