--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,3 +34,9 @@ services:
     # please note that last definitions always *replace* previous ones
     sensio_framework_extra.view.listener:
         alias: Sensio\Bundle\FrameworkExtraBundle\EventListener\TemplateListener
+        
+    app.jwt_token_authenticator:
+        class: App\Security\Guard\JWTTokenAuthenticator
+        parent: lexik_jwt_authentication.security.guard.jwt_token_authenticator
+        autowire: true
+        autoconfigure: false
