--- a/.env
+++ b/.env
@@ -37,3 +37,9 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=f3bc8ce2f35721e52c1046854694ca59
 ###< lexik/jwt-authentication-bundle ###
+
+API_URL='"http://127.0.0.1:8080/api/"'
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
