--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "knplabs/knp-paginator-bundle": "^5.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/api-doc-bundle": "^3.5",
+        "nelmio/cors-bundle": "^2.0",
         "paragonie/random_compat": "2.0.9",
         "ramsey/uuid": "^3.9",
         "sensio/framework-extra-bundle": "^5.5",
