--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "axios": "^0.19.0",
         "bootstrap": "^4.4.1",
+        "dotenv": "^8.2.0",
         "jquery": "^3.4.1",
         "sass": "^1.23.7",
         "slick-carousel": "^1.8.1",
