--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
         "csfix": "eslint assets/vue --ext .js,.vue, --fix"
     },
     "dependencies": {
+        "@babel/plugin-proposal-private-methods": "^7.7.4",
         "axios": "^0.19.0",
         "bootstrap": "^4.4.1",
         "dotenv": "^8.2.0",
         "jquery": "^3.4.1",
+        "lodash": "^4.17.15",
+        "popper.js": "^1.16.0",
         "sass": "^1.23.7",
         "slick-carousel": "^1.8.1",
         "vue": "^2.6.10",
